<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.galaxystoreadmin.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_addProduct"
            app:destination="@id/addProduct" />

    </fragment>

    <fragment
        android:id="@+id/addProduct"
        android:name="com.example.galaxystoreadmin.fragments.AddProductFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add_product" >

        <action
            android:id="@+id/action_addProduct_to_home"
            app:destination="@id/home" />

    </fragment>
    <fragment
        android:id="@+id/order"
        android:name="com.example.galaxystoreadmin.fragments.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" >
        <action
            android:id="@+id/action_order_to_orderConfirmFragment"
            app:destination="@id/orderConfirmFragment" />
        <action
            android:id="@+id/action_order_to_home"
            app:destination="@id/home"
            app:popUpTo="@id/home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/orderConfirmFragment"
        android:name="com.example.galaxystoreadmin.fragments.OrderConfirmFragment"
        android:label="fragment_order_confirm"
        tools:layout="@layout/fragment_order_confirm" >
        <action
            android:id="@+id/action_orderConfirmFragment_to_order"
            app:destination="@id/order"
            app:popUpTo="@id/home"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>