<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    tools:context=".fragments.AddProductFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10.00dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_20ssp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.00dp"
                android:layout_marginStart="17.00dp"
                android:layout_marginEnd="17.00dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:cursorColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/product_name"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.00dp"
                android:layout_marginStart="17.00dp"
                android:layout_marginEnd="17.00dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:cursorColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/product_price"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.00dp"
                android:layout_marginStart="17.00dp"
                android:layout_marginEnd="17.00dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:cursorColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edStock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/product_stock"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.00dp"
                android:layout_marginStart="17.00dp"
                android:layout_marginEnd="17.00dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:cursorColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/discount"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.00dp"
                android:layout_marginStart="17.00dp"
                android:layout_marginEnd="17.00dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:cursorColor="@color/black"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/baseline_ac_unit_24"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black">

                <AutoCompleteTextView
                    android:id="@+id/edCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_cat"
                    android:inputType="none"
                    android:textColor="@color/black"
                    android:drawableTint="@color/red"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.00dp"
                android:layout_marginStart="17.00dp"
                android:layout_marginEnd="17.00dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:cursorColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/desc"
                    android:gravity="top|start"
                    android:maxLines="10"
                    android:minLines="6"
                    android:scrollbars="vertical"
                    android:lines="8"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/selectImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_img"
                android:layout_marginTop="20.00dp"
                android:layout_marginStart="17.00dp"
                android:layout_marginEnd="17.00dp"
                android:textColor="@color/orange"
                android:textAlignment="center"
                android:textSize="@dimen/_16ssp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductImages"
                android:layout_width="match_parent"
                android:layout_height="120.00dp"
                android:visibility="gone"
                android:layout_marginHorizontal="17.00dp"
                android:layout_marginTop="20.00dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_view_image_selection"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addProductBtn"
                android:layout_width="match_parent"
                android:layout_height="55.50dp"
                android:layout_marginHorizontal="17.00dp"
                android:layout_marginTop="20.00dp"
                android:layout_marginBottom="30.00dp"
                android:backgroundTint="@color/orange"
                android:text="@string/add"
                android:textSize="@dimen/_22ssp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:cornerRadius="10.40dp"/>

        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>