<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    tools:context=".fragments.SplashFragment">



     <androidx.cardview.widget.CardView
         android:id="@+id/imageView"
         android:layout_width="200.00dp"
         android:layout_height="200.00dp"
         app:cardCornerRadius="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">

          <ImageView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:contentDescription="@string/name"
              android:scaleType="centerCrop"
              android:src="@drawable/icon"
              />
     </androidx.cardview.widget.CardView>


     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">

          <TextView
              android:id="@+id/textView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/splash"
              android:textColor="@color/black"
              android:textSize="@dimen/_30sdp"
              android:textStyle="bold" />


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="5dp"
              android:text="@string/splash_sc"
              android:textColor="@color/orange"
              android:textSize="@dimen/_30sdp"
              android:textStyle="bold" />
     </LinearLayout>

     <View
         android:id="@+id/view"
         android:layout_width="300dp"
         android:layout_height="2dp"
         android:layout_marginTop="7dp"
         android:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_7sdp"
         android:text="@string/name"
         android:textColor="@color/orange"
         android:textSize="@dimen/_30sdp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>