<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/image"
        android:padding="4dp"
        android:layout_width="100dp"
        android:layout_height="125dp"
        android:layout_marginHorizontal="12.00dp"
        android:layout_marginVertical="5.00dp"
        android:contentDescription="@string/name"
        android:scaleType="centerCrop"
        android:src="@drawable/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view"/>
    <!--    </androidx.cardview.widget.CardView>-->


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10.00dp"
        android:layout_marginEnd="17.00dp"
        android:layout_marginTop="10.00dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10.00dp"
        android:layout_marginTop="10.00dp"
        android:text="@string/product_price"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/tvOrderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10.00dp"
        android:layout_marginTop="12.00dp"
        android:text="@string/name"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/orderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.00dp"
        android:text="@string/name"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvOrderDate"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="5.5dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>